[tool.poetry]
name = "edgehog"
version = "0.1.0"
description = "Infering ancestral synteny with hierarchical orthologous groups"
authors = ["Charles Bernard <charles.bernard@unil.ch>",
           "Adrian Altenhoff <adrian.altenhoff@inf.ethz.ch>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DessimozLab/edgehog"
keywords = ["bioinformatics", "synteny", "ancestral gene order"]
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.20.0"
pandas = ">1.3.0,<2.0.0"
networkx = "^3.1"
pyham = "^1.1.11"
ete3 = "^3.1.2"
pyoma = "^0.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[tool.poetry.scripts]
edgehog = 'edgehog.edgehog:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
