[tool.poetry]
name = "edgehog"
version = "0.1.5"
description = "Infering ancestral synteny with hierarchical orthologous groups"
authors = ["Charles Bernard <charles.bernard@unil.ch>",
           "Adrian Altenhoff <adrian.altenhoff@inf.ethz.ch>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DessimozLab/edgehog"
keywords = ["bioinformatics", "synteny", "ancestral gene order"]
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=1.20.0,<3"
pandas = ">1.3.0,<3.0.0"
networkx = ">=2.8,<4"
pyham = "^1.1.11"
ete3 = "^3.1.2"
pyoma = {version = ">=0.13.3", optional = true}

[tool.poetry.extras]
oma = ["pyoma"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[tool.poetry.scripts]
edgehog = 'edgehog.edgehog:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
