[project]
name = "edgehog"
version = "0.1.6"
description = "Infering ancestral synteny with hierarchical orthologous groups"
authors = [
   {name="Charles Bernard", email="charles.bernard@unil.ch"},
   {name="Adrian Altenhoff", email="adrian.altenhoff@inf.ethz.ch"},
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DessimozLab/edgehog"
keywords = ["bioinformatics", "synteny", "ancestral gene order"]
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9,<3.13"
dependencies = [
  "numpy>=1.23.0,<3",
  "pandas>1.3.0,<3",
  "networkx>=2.8,<4",
  "pyham>=1.2,<2",
  "ete3>=3.1.3,<4",
]

[project.optional-dependencies]
oma = ["pyoma>=0.13.3,<1"]

[project.scripts]
edgehog = 'edgehog.edgehog:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
